--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
     volumes:
       - ./:/var/www/html/
     ports:
-      - "8000:80"
+      - "${APP_PORT}:80"
     links:
       - db
