--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       - ./data/:/var/lib/mysql/
 
   web:
-    image: leocavalcante/lampiao:1.0
+    image: leocavalcante/lampiao:<version>
     volumes:
       - ./:/var/www/html/
     ports:
-      - "${APP_PORT}:80"
+      - "${DOCKER_WEB_PORT}:80"
     links:
       - db
